some UI changes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <input type="number" id="numLifts" min="1">
         <button id="submitBtn">Submit</button>
     </section>
-    <div id="liftContainer"></div>
+    <div id="container"></div>
     <script src="index.js"></script>
 </body>
 </html>
